# Hydrangea

./: .gitignore  CMakeLists.txt  README.md
assets/: config.json
assets/strings/: en.json
src/: game.c  game.h  main.c  resource.rc  resource.res
